--- a/src/css/style.css
+++ b/src/css/style.css
@@ -301,7 +301,7 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 1000;
 }
 
-.language-selector:hover .language-dropdown {
+.language-dropdown.show {
   display: block;
 }
 
